refactor: 게시글 쿼리 및 레포지토리 수정